test/libhyperion/syntaxTests/denominations/invalid_denomination_on_bool.hyp
contract C {
	bool constant x = true znd;
}
// ----
// ParserError 2314: (37-42): Expected ';' but got 'znd'
